# sample-dbt-predict

./: .env  .gitignore  Dockerfile  README.md  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
models/: my_python_model.py
