[tool.poetry]
name = "sample-dbt"
version = "0.1.0-dev"
description = "dbtサンプル"
authors = ["u6k <u6k.apps@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.5"
dbt-postgres = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
